# bmb-turtle-robot

./: README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_hardware/include/my_robot_hardware/: pca9685_bts7960.hpp
install/my_robot_hardware/share/my_robot_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  (+1 more)
log/: latest_build
src/I2C test/: test_pca9685_bts7960.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml  joystick.yaml  my_cartographer.lua  my_robot_controller.yaml  nav2_params.yaml  slam_toolbox_params.yaml
src/my_robot_bringup/launch/: my_robot.launch.xml  my_robot_gazebo.launch.xml
src/my_robot_bringup/worlds/: obstacles_world.sdf
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: arm.ros2_control.xacro  camera.xacro  lidar.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  my_robot.urdf.xacro  my_robot_gazebo_ros2_control.xacro
src/my_robot_hardware/: CMakeLists.txt  pca9685_bts7960.plugin.xml
src/my_robot_hardware/include/my_robot_hardware/: pca9685_bts7960.hpp
src/my_robot_hardware/src/: pca9685_bts7960.cpp
(+43 files in other folders)
